CppDigitalTwin/DigitalTwinLib/src/Model/Parser/SysMLv2/SysMLv2Parser.cpp

// Generated from SysMLv2.g4 by ANTLR 4.13.2


#include "SysMLv2Listener.h"

#include "SysMLv2Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SysMLv2ParserStaticData final {
  SysMLv2ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SysMLv2ParserStaticData(const SysMLv2ParserStaticData&) = delete;
  SysMLv2ParserStaticData(SysMLv2ParserStaticData&&) = delete;
  SysMLv2ParserStaticData& operator=(const SysMLv2ParserStaticData&) = delete;
  SysMLv2ParserStaticData& operator=(SysMLv2ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sysmlv2ParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SysMLv2ParserStaticData> sysmlv2ParserStaticData = nullptr;

void sysmlv2ParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sysmlv2ParserStaticData != nullptr) {
    return;
  }
#else
  assert(sysmlv2ParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SysMLv2ParserStaticData>(
    std::vector<std::string>{
      "start", "elemements", "dependency", "textual_representaion", "comment", 
      "part", "port", "attribute", "item", "package", "assertion", "actions", 
      "alias", "visibility", "import_rule", "abstraction", "variation", 
      "variant", "function", "input", "output", "return", "command_definition", 
      "connectTo", "type_definition", "about", "specilization", "decriptor", 
      "namelist", "name", "address", "bracketed_content", "fuction_arguments", 
      "argument", "delimiter_rule", "multiplicity", "unit", "definition_rule"
    },
    std::vector<std::string>{
      "", "':'", "','", "'\"'", "'''", "'::'", "'{'", "'}'", "'('", "')'", 
      "'['", "']'", "'dependency'", "'rep'", "'language'", "'doc'", "'comment'", 
      "'about'", "'part'", "", "", "'to'", "'from'", "'for'", "';'", "'port'", 
      "'item'", "'package'", "'def'", "'attribute'", "'measurable'", "'controllable'", 
      "'assert'", "'action'", "'alias'", "'private'", "'protected'", "'public'", 
      "'import'", "'abstract'", "'variation'", "'variant'", "'*'", "'calc'", 
      "'in'", "'out'", "'return'", "'#'", "'command'", "'variable'", "'connectTo'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "DEPENDENCY", "REPRESENTATION", 
      "LANGUAGE_DESCRIPTOR", "DOCUMENTATION", "COMMENT", "ABOUT", "PART", 
      "BLOCK_COMMENT", "LINE_COMMENT", "TO", "FROM", "FOR", "DELIMITER", 
      "PORT", "ITEM", "PACKAGE", "DEFINITION", "ATTRIBUTE", "MEASURABLE", 
      "CONTROLLABLE", "ASSERT", "ACTION", "ALIAS", "PRIVATE", "PROTECTED", 
      "PUBLIC", "IMPORT", "ABSTRACT", "VARIATION", "VARIANT", "STAR", "CALC", 
      "IN", "OUT", "RETURN", "HASHTAG", "COMMAND", "VARIABLE", "CONNECT_TO", 
      "NUMBER", "NAME", "INT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sysmlv2ParserStaticData = std::move(staticData);
}

}

SysMLv2Parser::SysMLv2Parser(TokenStream *input) : SysMLv2Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SysMLv2Parser::SysMLv2Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SysMLv2Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sysmlv2ParserStaticData->atn, sysmlv2ParserStaticData->decisionToDFA, sysmlv2ParserStaticData->sharedContextCache, options);
}

SysMLv2Parser::~SysMLv2Parser() {
  delete _interpreter;
}

const atn::ATN& SysMLv2Parser::getATN() const {
  return *sysmlv2ParserStaticData->atn;
}

std::string SysMLv2Parser::getGrammarFileName() const {
  return "SysMLv2.g4";
}

const std::vector<std::string>& SysMLv2Parser::getRuleNames() const {
  return sysmlv2ParserStaticData->ruleNames;
}

const dfa::Vocabulary& SysMLv2Parser::getVocabulary() const {
  return sysmlv2ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SysMLv2Parser::getSerializedATN() const {
  return sysmlv2ParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

SysMLv2Parser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SysMLv2Parser::ElemementsContext *> SysMLv2Parser::StartContext::elemements() {
  return getRuleContexts<SysMLv2Parser::ElemementsContext>();
}

SysMLv2Parser::ElemementsContext* SysMLv2Parser::StartContext::elemements(size_t i) {
  return getRuleContext<SysMLv2Parser::ElemementsContext>(i);
}


size_t SysMLv2Parser::StartContext::getRuleIndex() const {
  return SysMLv2Parser::RuleStart;
}

void SysMLv2Parser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void SysMLv2Parser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

SysMLv2Parser::StartContext* SysMLv2Parser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, SysMLv2Parser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(76);
        elemements(); 
      }
      setState(81);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElemementsContext ------------------------------------------------------------------

SysMLv2Parser::ElemementsContext::ElemementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysMLv2Parser::DependencyContext* SysMLv2Parser::ElemementsContext::dependency() {
  return getRuleContext<SysMLv2Parser::DependencyContext>(0);
}

SysMLv2Parser::CommentContext* SysMLv2Parser::ElemementsContext::comment() {
  return getRuleContext<SysMLv2Parser::CommentContext>(0);
}

SysMLv2Parser::PartContext* SysMLv2Parser::ElemementsContext::part() {
  return getRuleContext<SysMLv2Parser::PartContext>(0);
}

SysMLv2Parser::PortContext* SysMLv2Parser::ElemementsContext::port() {
  return getRuleContext<SysMLv2Parser::PortContext>(0);
}

SysMLv2Parser::ItemContext* SysMLv2Parser::ElemementsContext::item() {
  return getRuleContext<SysMLv2Parser::ItemContext>(0);
}

SysMLv2Parser::PackageContext* SysMLv2Parser::ElemementsContext::package() {
  return getRuleContext<SysMLv2Parser::PackageContext>(0);
}

SysMLv2Parser::AttributeContext* SysMLv2Parser::ElemementsContext::attribute() {
  return getRuleContext<SysMLv2Parser::AttributeContext>(0);
}

SysMLv2Parser::AssertionContext* SysMLv2Parser::ElemementsContext::assertion() {
  return getRuleContext<SysMLv2Parser::AssertionContext>(0);
}

SysMLv2Parser::ActionsContext* SysMLv2Parser::ElemementsContext::actions() {
  return getRuleContext<SysMLv2Parser::ActionsContext>(0);
}

SysMLv2Parser::AliasContext* SysMLv2Parser::ElemementsContext::alias() {
  return getRuleContext<SysMLv2Parser::AliasContext>(0);
}

SysMLv2Parser::VisibilityContext* SysMLv2Parser::ElemementsContext::visibility() {
  return getRuleContext<SysMLv2Parser::VisibilityContext>(0);
}

SysMLv2Parser::Import_ruleContext* SysMLv2Parser::ElemementsContext::import_rule() {
  return getRuleContext<SysMLv2Parser::Import_ruleContext>(0);
}

SysMLv2Parser::AbstractionContext* SysMLv2Parser::ElemementsContext::abstraction() {
  return getRuleContext<SysMLv2Parser::AbstractionContext>(0);
}

SysMLv2Parser::VariationContext* SysMLv2Parser::ElemementsContext::variation() {
  return getRuleContext<SysMLv2Parser::VariationContext>(0);
}

SysMLv2Parser::VariantContext* SysMLv2Parser::ElemementsContext::variant() {
  return getRuleContext<SysMLv2Parser::VariantContext>(0);
}

SysMLv2Parser::FunctionContext* SysMLv2Parser::ElemementsContext::function() {
  return getRuleContext<SysMLv2Parser::FunctionContext>(0);
}

SysMLv2Parser::InputContext* SysMLv2Parser::ElemementsContext::input() {
  return getRuleContext<SysMLv2Parser::InputContext>(0);
}

SysMLv2Parser::OutputContext* SysMLv2Parser::ElemementsContext::output() {
  return getRuleContext<SysMLv2Parser::OutputContext>(0);
}

SysMLv2Parser::ReturnContext* SysMLv2Parser::ElemementsContext::return_() {
  return getRuleContext<SysMLv2Parser::ReturnContext>(0);
}

SysMLv2Parser::Command_definitionContext* SysMLv2Parser::ElemementsContext::command_definition() {
  return getRuleContext<SysMLv2Parser::Command_definitionContext>(0);
}

SysMLv2Parser::Textual_representaionContext* SysMLv2Parser::ElemementsContext::textual_representaion() {
  return getRuleContext<SysMLv2Parser::Textual_representaionContext>(0);
}

SysMLv2Parser::ConnectToContext* SysMLv2Parser::ElemementsContext::connectTo() {
  return getRuleContext<SysMLv2Parser::ConnectToContext>(0);
}


size_t SysMLv2Parser::ElemementsContext::getRuleIndex() const {
  return SysMLv2Parser::RuleElemements;
}

void SysMLv2Parser::ElemementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElemements(this);
}

void SysMLv2Parser::ElemementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElemements(this);
}

SysMLv2Parser::ElemementsContext* SysMLv2Parser::elemements() {
  ElemementsContext *_localctx = _tracker.createInstance<ElemementsContext>(_ctx, getState());
  enterRule(_localctx, 2, SysMLv2Parser::RuleElemements);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(104);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(82);
      dependency();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(83);
      comment();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(84);
      part();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(85);
      port();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(86);
      item();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(87);
      package();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(88);
      attribute();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(89);
      assertion();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(90);
      actions();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(91);
      alias();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(92);
      visibility();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(93);
      import_rule();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(94);
      abstraction();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(95);
      variation();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(96);
      variant();
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(97);
      function();
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(98);
      input();
      break;
    }

    case 18: {
      enterOuterAlt(_localctx, 18);
      setState(99);
      output();
      break;
    }

    case 19: {
      enterOuterAlt(_localctx, 19);
      setState(100);
      return_();
      break;
    }

    case 20: {
      enterOuterAlt(_localctx, 20);
      setState(101);
      command_definition();
      break;
    }

    case 21: {
      enterOuterAlt(_localctx, 21);
      setState(102);
      textual_representaion();
      break;
    }

    case 22: {
      enterOuterAlt(_localctx, 22);
      setState(103);
      connectTo();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DependencyContext ------------------------------------------------------------------

SysMLv2Parser::DependencyContext::DependencyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysMLv2Parser::DependencyContext::DEPENDENCY() {
  return getToken(SysMLv2Parser::DEPENDENCY, 0);
}

std::vector<SysMLv2Parser::NamelistContext *> SysMLv2Parser::DependencyContext::namelist() {
  return getRuleContexts<SysMLv2Parser::NamelistContext>();
}

SysMLv2Parser::NamelistContext* SysMLv2Parser::DependencyContext::namelist(size_t i) {
  return getRuleContext<SysMLv2Parser::NamelistContext>(i);
}

tree::TerminalNode* SysMLv2Parser::DependencyContext::TO() {
  return getToken(SysMLv2Parser::TO, 0);
}

tree::TerminalNode* SysMLv2Parser::DependencyContext::DELIMITER() {
  return getToken(SysMLv2Parser::DELIMITER, 0);
}

tree::TerminalNode* SysMLv2Parser::DependencyContext::FROM() {
  return getToken(SysMLv2Parser::FROM, 0);
}


size_t SysMLv2Parser::DependencyContext::getRuleIndex() const {
  return SysMLv2Parser::RuleDependency;
}

void SysMLv2Parser::DependencyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDependency(this);
}

void SysMLv2Parser::DependencyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDependency(this);
}

SysMLv2Parser::DependencyContext* SysMLv2Parser::dependency() {
  DependencyContext *_localctx = _tracker.createInstance<DependencyContext>(_ctx, getState());
  enterRule(_localctx, 4, SysMLv2Parser::RuleDependency);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(SysMLv2Parser::DEPENDENCY);
    setState(107);
    namelist();
    setState(110);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysMLv2Parser::FROM) {
      setState(108);
      match(SysMLv2Parser::FROM);
      setState(109);
      namelist();
    }
    setState(112);
    match(SysMLv2Parser::TO);
    setState(113);
    namelist();
    setState(114);
    match(SysMLv2Parser::DELIMITER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Textual_representaionContext ------------------------------------------------------------------

SysMLv2Parser::Textual_representaionContext::Textual_representaionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysMLv2Parser::DecriptorContext* SysMLv2Parser::Textual_representaionContext::decriptor() {
  return getRuleContext<SysMLv2Parser::DecriptorContext>(0);
}

tree::TerminalNode* SysMLv2Parser::Textual_representaionContext::BLOCK_COMMENT() {
  return getToken(SysMLv2Parser::BLOCK_COMMENT, 0);
}

tree::TerminalNode* SysMLv2Parser::Textual_representaionContext::REPRESENTATION() {
  return getToken(SysMLv2Parser::REPRESENTATION, 0);
}

tree::TerminalNode* SysMLv2Parser::Textual_representaionContext::NAME() {
  return getToken(SysMLv2Parser::NAME, 0);
}


size_t SysMLv2Parser::Textual_representaionContext::getRuleIndex() const {
  return SysMLv2Parser::RuleTextual_representaion;
}

void SysMLv2Parser::Textual_representaionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTextual_representaion(this);
}

void SysMLv2Parser::Textual_representaionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTextual_representaion(this);
}

SysMLv2Parser::Textual_representaionContext* SysMLv2Parser::textual_representaion() {
  Textual_representaionContext *_localctx = _tracker.createInstance<Textual_representaionContext>(_ctx, getState());
  enterRule(_localctx, 6, SysMLv2Parser::RuleTextual_representaion);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysMLv2Parser::REPRESENTATION) {
      setState(116);
      match(SysMLv2Parser::REPRESENTATION);
    }
    setState(120);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysMLv2Parser::NAME) {
      setState(119);
      match(SysMLv2Parser::NAME);
    }
    setState(122);
    decriptor();
    setState(123);
    match(SysMLv2Parser::BLOCK_COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

SysMLv2Parser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysMLv2Parser::CommentContext::BLOCK_COMMENT() {
  return getToken(SysMLv2Parser::BLOCK_COMMENT, 0);
}

tree::TerminalNode* SysMLv2Parser::CommentContext::COMMENT() {
  return getToken(SysMLv2Parser::COMMENT, 0);
}

tree::TerminalNode* SysMLv2Parser::CommentContext::NAME() {
  return getToken(SysMLv2Parser::NAME, 0);
}

SysMLv2Parser::AboutContext* SysMLv2Parser::CommentContext::about() {
  return getRuleContext<SysMLv2Parser::AboutContext>(0);
}

tree::TerminalNode* SysMLv2Parser::CommentContext::DOCUMENTATION() {
  return getToken(SysMLv2Parser::DOCUMENTATION, 0);
}

tree::TerminalNode* SysMLv2Parser::CommentContext::LINE_COMMENT() {
  return getToken(SysMLv2Parser::LINE_COMMENT, 0);
}


size_t SysMLv2Parser::CommentContext::getRuleIndex() const {
  return SysMLv2Parser::RuleComment;
}

void SysMLv2Parser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void SysMLv2Parser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

SysMLv2Parser::CommentContext* SysMLv2Parser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 8, SysMLv2Parser::RuleComment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(140);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SysMLv2Parser::BLOCK_COMMENT: {
        enterOuterAlt(_localctx, 1);
        setState(125);
        match(SysMLv2Parser::BLOCK_COMMENT);
        break;
      }

      case SysMLv2Parser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(126);
        match(SysMLv2Parser::COMMENT);
        setState(128);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SysMLv2Parser::NAME) {
          setState(127);
          match(SysMLv2Parser::NAME);
        }
        setState(131);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SysMLv2Parser::ABOUT) {
          setState(130);
          about();
        }
        setState(133);
        match(SysMLv2Parser::BLOCK_COMMENT);
        break;
      }

      case SysMLv2Parser::DOCUMENTATION: {
        enterOuterAlt(_localctx, 3);
        setState(134);
        match(SysMLv2Parser::DOCUMENTATION);
        setState(136);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SysMLv2Parser::NAME) {
          setState(135);
          match(SysMLv2Parser::NAME);
        }
        setState(138);
        match(SysMLv2Parser::BLOCK_COMMENT);
        break;
      }

      case SysMLv2Parser::LINE_COMMENT: {
        enterOuterAlt(_localctx, 4);
        setState(139);
        match(SysMLv2Parser::LINE_COMMENT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PartContext ------------------------------------------------------------------

SysMLv2Parser::PartContext::PartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysMLv2Parser::PartContext::PART() {
  return getToken(SysMLv2Parser::PART, 0);
}

tree::TerminalNode* SysMLv2Parser::PartContext::NAME() {
  return getToken(SysMLv2Parser::NAME, 0);
}

SysMLv2Parser::Delimiter_ruleContext* SysMLv2Parser::PartContext::delimiter_rule() {
  return getRuleContext<SysMLv2Parser::Delimiter_ruleContext>(0);
}

tree::TerminalNode* SysMLv2Parser::PartContext::DEFINITION() {
  return getToken(SysMLv2Parser::DEFINITION, 0);
}

SysMLv2Parser::SpecilizationContext* SysMLv2Parser::PartContext::specilization() {
  return getRuleContext<SysMLv2Parser::SpecilizationContext>(0);
}


size_t SysMLv2Parser::PartContext::getRuleIndex() const {
  return SysMLv2Parser::RulePart;
}

void SysMLv2Parser::PartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPart(this);
}

void SysMLv2Parser::PartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPart(this);
}

SysMLv2Parser::PartContext* SysMLv2Parser::part() {
  PartContext *_localctx = _tracker.createInstance<PartContext>(_ctx, getState());
  enterRule(_localctx, 10, SysMLv2Parser::RulePart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    match(SysMLv2Parser::PART);
    setState(144);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysMLv2Parser::DEFINITION) {
      setState(143);
      match(SysMLv2Parser::DEFINITION);
    }
    setState(146);
    match(SysMLv2Parser::NAME);
    setState(148);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysMLv2Parser::T__0) {
      setState(147);
      specilization();
    }
    setState(150);
    delimiter_rule();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PortContext ------------------------------------------------------------------

SysMLv2Parser::PortContext::PortContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysMLv2Parser::PortContext::PORT() {
  return getToken(SysMLv2Parser::PORT, 0);
}

tree::TerminalNode* SysMLv2Parser::PortContext::NAME() {
  return getToken(SysMLv2Parser::NAME, 0);
}

SysMLv2Parser::Delimiter_ruleContext* SysMLv2Parser::PortContext::delimiter_rule() {
  return getRuleContext<SysMLv2Parser::Delimiter_ruleContext>(0);
}

tree::TerminalNode* SysMLv2Parser::PortContext::DEFINITION() {
  return getToken(SysMLv2Parser::DEFINITION, 0);
}

SysMLv2Parser::SpecilizationContext* SysMLv2Parser::PortContext::specilization() {
  return getRuleContext<SysMLv2Parser::SpecilizationContext>(0);
}


size_t SysMLv2Parser::PortContext::getRuleIndex() const {
  return SysMLv2Parser::RulePort;
}

void SysMLv2Parser::PortContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPort(this);
}

void SysMLv2Parser::PortContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysMLv2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPort(this);
}

SysMLv2Parser::PortContext* SysMLv2Parser::port() {
  PortContext *_localctx = _tracker.createInstance<PortContext>(_ctx, getState());
  enterRule(_localctx, 12, SysMLv2Parser::RulePort);
  size_t _la = 0;
